--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions:setup-python@v2
+      uses: actions/setup-python@v2  # <-- CORREÇÃO AQUI: de 'actions:setup-python' para 'actions/setup-python'
       with:
         python-version: '3.x'
 
